--- a/OnlineShop/Server/OnlineShop.Server.csproj
+++ b/OnlineShop/Server/OnlineShop.Server.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.9" />
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="Swashbuckle" Version="5.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Data.Odbc" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
