--- a/OnlineShop/Server/OnlineShop.Server.csproj
+++ b/OnlineShop/Server/OnlineShop.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.9" />
     <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="Swashbuckle" Version="5.6.0" />
