--- a/OnlineShop/Server/appsettings.json
+++ b/OnlineShop/Server/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySql": "User Id=root;Host=localhost;Character Set=utf8;Database=online_shop",
+    "ODBC": "dsn=OnlineShopODBC;uid=root;database=online_shop;"
+  }
 }
