--- a/OnlineShop/Client/OnlineShop.Client.csproj
+++ b/OnlineShop/Client/OnlineShop.Client.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\Shared\OnlineShop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css" />
+    <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css.map" />
+  </ItemGroup>
+
 </Project>
