Update Client: install Cropper

--- a/OnlineShop/Client/OnlineShop.Client.csproj
+++ b/OnlineShop/Client/OnlineShop.Client.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Chronos.Blazor.Cropper" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.9" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="5.2.0" />
