Add Server Authentication

--- a/OnlineShop/Server/appsettings.json
+++ b/OnlineShop/Server/appsettings.json
@@ -10,5 +10,9 @@
   "ConnectionStrings": {
     "MySql": "User Id=root;Host=localhost;Character Set=utf8;Database=online_shop",
     "ODBC": "dsn=OnlineShopODBC;uid=root;database=online_shop;"
+  },
+  "Auth":{
+    "PrivateKey": "some-private-key",
+    "Enable": true
   }
 }
