--- a/OnlineShop/Server/OnlineShop.Server.csproj
+++ b/OnlineShop/Server/OnlineShop.Server.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.9" />
     <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00241" />
