some changes with translating labels to russian language + fixes

--- a/OnlineShop/Client/OnlineShop.Client.csproj
+++ b/OnlineShop/Client/OnlineShop.Client.csproj
@@ -21,4 +21,10 @@
     <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap\bootstrap.min.css.map" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Shared\PaletteView.css">
+      <DependentUpon>PaletteView.razor</DependentUpon>
+    </None>
+  </ItemGroup>
+
 </Project>
